--- a/public/styles.css
+++ b/public/styles.css
@@ -42,18 +42,33 @@ button:hover {
   display: flex;
   width: 70%;
   justify-content: center;
-  align-items: center;
   margin: auto;
-  margin-top: 1rem;
   flex-wrap: wrap;
   row-gap: 1rem;
   column-gap: 1rem;
+  flex: 1;
+}
+.boxarea {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  flex-wrap: wrap;
+  row-gap: 2rem;
+  align-items: stretch;
+}
+.boxarea .buttons {
+  width: 30rem;
+  flex-direction: column;
+  justify-content: space-between;
+  margin: 0px !important;
 }
 .title {
   text-align: center;
   margin: auto;
   margin-top: 1rem;
   margin-bottom: 1rem;
+  font-size: 1.6rem;
 }
 .message {
   text-align: center;
@@ -62,7 +77,9 @@ button:hover {
 }
 input[type='text'],
 input[type='email'],
-input[type='password'] {
+input[type='password'],
+input[type='number'],
+input[type='date'] {
   display: block;
   margin: auto;
   padding: 0.5rem;
@@ -100,15 +117,4 @@ button {
   border-radius: 5px;
   font-size: 0.9rem;
   overflow-y: auto;
-}
-.boxarea {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: row;
-  flex-wrap: wrap;
-  row-gap: 2rem;
-}
-.boxarea .buttons {
-  width: 30rem;
 }
